@startuml

package Aws {
  class EC2::Client
  class EC2::Resource
}

package CFM {
  class CFM::Vpc
}

package VPC {
  class VPC::Vpc
}

Interface CertificationHelper
Interface ConfigurationHelper

package EC2 {
  Interface VpcInterface
  VpcInterface <|-r- CFM::Vpc
  VpcInterface <|-l- VPC::Vpc

  class Ec2 {
    create()
    destroy()
    start()
    stop()
    reboot()
  }
  CertificationHelper <|-- Ec2ApiGateway
  ConfigurationHelper <|-- Configuration
  Ec2ApiGateway -u-> Aws
  Ec2 -r-> VpcInterface
  Ec2 "1" *-u- "1" Configuration
  Ec2 "1" *-u- "1" Ec2ApiGateway
  Ec2 "1" *-- "1..*" Ec2Instance
  Ec2 "1" *-- "1" KeyPair
  Ec2 "1" *-- "1" SecurityGroup

}

@enduml